objects/Veda_file_Note__c.object
<CustomObject>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipName>file_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>date_Recorded__c</fullName>
        <label>date Recorded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_References__c</fullName>
        <label>id References</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>note__c</fullName>
        <label>note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda file Note</label>
    <nameField>
        <label>fileNote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda file Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>